# IC-doodle-stable-memory

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/doodle_ic_api/: Cargo.toml  doodle_ic_api.did  lib.rs
src/doodle_ic_api_assets/src/: index.html  index.js
