[package]
name = "doodle_ic_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
